[package]
name = "rust-actix-seaorm"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
sea-orm = { version = "1.1.7", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
shuttle-actix-web = "0.53.0"
shuttle-runtime = "0.53.0"
shuttle-shared-db = "0.53.0"
tokio = { version = "1.44.1", features = ["full"] }
