[package]
name = "rust-actix-seaorm"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
async-trait = "0.1.88"
dotenv = "0.15.0"
env_logger = "0.11.7"
log = "0.4.26"
sea-orm = { version = "1.1.7", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
sea-orm-migration = "1.1.7"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
